# code-snippet-book

./: .gitignore  404.html  README.md  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  theme.config.tsx
404/: index.html
components/: embed-source-code.jsx  logo.tsx
config/: constants.ts
docs/: 404.html  index.html
docs/404/: index.html
frontend/mdx-embed-video/: index.html
frontend/mdx-syntax-highlighting-for-pycharm/: index.html
nextra-host/: next.config.js  out  package-lock.json  package.json  theme.config.tsx
nextra-host/pages/: _meta.json
pages/: _meta.json  index.mdx
pages/frontend/: mdx-embed-video.md  mdx-syntax-highlighting-for-pycharm.md
pages/python/: get-file-size.mdx  get-func-source.mdx  get-python-version-info-by-script.md  get-screen-size.md  load-module-by-path.mdx  pip-commonly-used.mdx  poetry-memo.mdx  streamlit.mdx  text-parens-scanner.md  watch-file-changes.mdx  which-platform.md  xlsxwriter.mdx  zipfiles.mdx
pages/shell/: ssh-keygen.mdx
plugins/: embed_codeblock.py
python/get-file-hash/: index.html
python/get-file-size/: index.html
python/get-func-source/: index.html
python/load-module-by-path/: index.html
python/pip-commonly-used/: index.html
python/poetry-memo/: index.html
python/streamlit/: index.html
python/text-parens-scanner/: index.html
python/watch-file-changes/: index.html
python/xlsxwriter/: index.html
python/zipfiles/: index.html
shell/bore-frp/: index.html
shell/chrome-app-mode/: index.html
shell/ssh-keygen/: index.html
(+125 files in other folders)
